<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">OpenCar</string>
    <string name="browsing_category_page_title">Browsing category: %s</string>
    <string name="default_browsing_category_page_title">Browsing selected category</string>
    <string name="edit_query_field_hint">Enter the query here</string>
    <string name="query_prompt">Query:</string>
    <string name="edit_button_text">Edit</string>
    <string name="search_in_prompt">Search in:</string>
    <string name="map_boundaries_text">Map Boundaries</string>
    <string name="radius_text">Radius</string>
    <string name="initial_radius">10</string>
    <string name="clear_filter_button_text">Clear Filter</string>
    <string name="apply_filter_button_text">Apply Filter</string>
    <string name="select_category_prompt">Select a category:</string>
    <string name="list_item_arrow">list item arrow</string>
    <string name="filter_button_text">Filter</string>
    <string name="show_on_map_button_text">Show on map</string>
    <string name="show_as_text_button_text">Show as text</string>
    <string name="next_symbol"><![CDATA[>>]]></string>
    <string name="previous_symbol"><![CDATA[<<]]></string>
    <string name="geo_points_text_list_item_template">%1$d. Lat: %2$s, Lon: %3$s</string>
    <string name="list_row_arrow_description">list row arrow</string>


    <string name="app_name2">Login example</string>
    <string name="btn_LoginBackendless">Вход</string>
    <string name="btn_LogoutBackendless">Logout from Backendless</string>
    <string name="btn_LoginFacebook">Login in Facebook</string>
    <string name="btn_LoginGooglePlus">Login in GooglePlus</string>
    <string name="btn_LoginTwitter">Login in Twitter</string>

    <string name="textView_BackendlessUserInfo">Backendless User info.</string>
    <string name="editText_BackendlessUserInfo">You should login as Backendless user first.</string>

    <string name="register_text">Регистрация</string>
    <string name="restore_link">Восстановить</string>
    <string name="login_prompt">E-Mail:</string>
    <string name="password_prompt">Пароль:</string>
    <string name="password_recovery_page_name">Восстановление пароля</string>
    <string name="remember_login_text">Запомнить меня</string>

    <string name="ownerId_field_prompt">OwnerId:</string>
    <string name="email_field_prompt">E-mail:</string>
    <string name="objectId_field_prompt">ObjectId:</string>
    <string name="created_field_prompt">Created:</string>
    <string name="password_field_prompt">Пароль:</string>
    <string name="updated_field_prompt">Updated:</string>
    <string name="name_field_prompt">ФИО:</string>
    <string name="file_field_prompt">File:</string>
    <string name="registration_success">Регистрация успешна!</string>
    <string name="registration_error">Ошибка регистрации!</string>

    <string name="restore_password_page_name">Восстановление пароляn</string>
    <string name="password_recovered_message">We sent an email to your email address with a link to a password change page. Please check your email and follow the link for further instructions.</string>
    <string name="registration_page_name">Регистрация</string>
    <string name="registration_success_message">Спасибо вам за регистрацию, мы проверим ваши данные %1$s.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- __________ change this credentials and configure your applications __________ -->
    <!-- You also need to set android debug key in Facebook and Google apps -->

    <!-- for Facebook -->
    <!-- https://developers.facebook.com/docs/facebook-login/android -->
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme">fb...</string>

    <!-- for Google -->
    <!-- https://developers.google.com/identity/sign-in/android/start-integrating -->
    <string name="gp_WebApp_ClientId"></string>
    <string name="gp_WebApp_ClientSecret"></string>
    <!-- __________ end __________ -->


    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="buttonApply">Забронировать</string>
    <string name="Пополнить_счет">Пополнить счет</string>

    <string name="ion_search"></string>
</resources>
                                