<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="LoginResult">


	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:layout_marginLeft="5dp"
			android:layout_marginTop="10dp"
			android:orientation="vertical">

		<TextView
				android:id="@+id/textView_bkndlsBackendlessUserInfo"
				android:text="@string/textView_BackendlessUserInfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textStyle="normal|bold" android:textSize="14sp"
				tools:layout_editor_absoluteX="6dp"/>

		<EditText
				android:id="@+id/editText_bkndlsBackendlessUserInfo"
				android:text="@string/editText_BackendlessUserInfo"
				android:layout_width="match_parent"
				android:layout_height="300dp"
				android:ems="10"
				android:textSize="14sp"
				android:textColor="@android:color/holo_red_dark"
				android:scrollbars="vertical"
				android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollIndicators="top|bottom" android:lines="9"
				android:inputType="none"/>

		<Button
				android:id="@+id/button_bkndlsBackendlessLogout"
				android:text="@string/btn_LogoutBackendless"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="true"
				android:visibility="invisible"/>
	</LinearLayout>

</RelativeLayout>

