<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dp16"
    android:paddingRight="@dimen/dp16">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categoryTitle"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="@dimen/text_large"
        android:paddingBottom="@dimen/dp4"
        android:text="@string/default_browsing_category_page_title"
        android:minHeight="@dimen/dp48" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp48"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp4"
        android:layout_marginBottom="@dimen/dp4">

        <Button
            android:layout_width="@dimen/dp144"
            android:layout_height="@dimen/dp48"
            android:text="@string/filter_button_text"
            android:id="@+id/filterButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true" />

        <Button
            android:layout_width="@dimen/dp144"
            android:layout_height="@dimen/dp48"
            android:text="@string/show_on_map_button_text"
            android:id="@+id/showAsMapButton"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/filterButton"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="@dimen/dp4">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/geoPointsList"
            android:minHeight="@dimen/dp48"
            android:layout_above="@+id/linearLayout"
            android:paddingBottom="@dimen/dp4"
            android:footerDividersEnabled="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp48"
            android:id="@+id/linearLayout"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="true"
            android:paddingTop="@dimen/dp4">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/previous_symbol"
                android:id="@+id/previousPageButton"
                android:layout_weight="1"
                android:paddingRight="@dimen/dp4"
                android:height="@dimen/dp40" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/next_symbol"
                android:id="@+id/nextPageButton"
                android:layout_weight="1"
                android:paddingLeft="@dimen/dp4"
                android:height="@dimen/dp40" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>