<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:paddingLeft="16dp"
			  android:paddingRight="16dp">

	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_marginBottom="4dp"
			android:minHeight="48dp">
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:layout_marginRight="4dp"/>
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/restore_password_page_name"
				android:layout_marginLeft="4dp"/>
	</LinearLayout>

	<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:gravity="center"
			android:layout_marginTop="4dp">
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:gravity="center"
				android:layout_marginBottom="4dp">
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:text="@string/login_prompt"
					android:id="@+id/textView2"
					android:layout_marginRight="4dp"
					android:gravity="center_vertical|right"/>
			<EditText
					android:layout_width="144dp"
					android:layout_height="48dp"
					android:id="@+id/loginField" android:layout_marginLeft="4dp"
					android:inputType="text" android:singleLine="true" android:textSize="12sp"/>
		</LinearLayout>

		<Button
			android:id="@+id/restorePasswordButton"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:layout_marginTop="4dp"
			android:text="Восстановить пароль" />
	</LinearLayout>

</LinearLayout>
